--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   cloud_firestore: ^3.1.0
   firebase_auth: ^3.2.0
+  google_fonts: ^2.1.0
 
 dev_dependencies:
   flutter_test:
